# UlSWaP-Bench

./: build.sh
hw/arm/: boot.s  config.cmake  memmap.ld  supportFuncs.c
hw/arm32ascc/: boot.s  checkpoint.s  config.cmake  init.c  restore.s  supportFuncs.c  table.s
hw/arm32test/: config.cmake
hw/msp430/: boot.s  config.cmake  memmap.ld  supportFuncs.c
hw/msp430_new/: config.cmake  memmap.ld
hw/msp430sim/: config.cmake  memmap1.ld
hw/rv32ascc/: boot.s  checkpoint.s  checkpoint_maybe.s  checkpoint_partial.s  config.cmake  init.c  restore.s  supportFuncs.c  supportFuncs.stage1.s  supportFuncs.stage2.s  table.s
hw/rv32sim/: boot.s  config.cmake  supportFuncs.c
hw/rv32test/: config.cmake  memmap.ld
hw/rv64sim/: boot.s  config.cmake
src/activity_rec/: CMakeLists.txt
src/adpcm_encode/: CMakeLists.txt
src/aes/: CMakeLists.txt
src/anomaly/: CMakeLists.txt
src/basicmath/: CMakeLists.txt
src/bitcount/: CMakeLists.txt
src/chacha20/: CMakeLists.txt
src/crc/: CMakeLists.txt  main.c
src/crc_slow/: CMakeLists.txt  crc.c
src/crc_small/: CMakeLists.txt  crc.c  crc.h
src/dijkstra/: CMakeLists.txt
src/ecc/: CMakeLists.txt
src/fft/: CMakeLists.txt
src/image_class/: CMakeLists.txt
src/jpeg_encode/: CMakeLists.txt
src/lorawan_down/: CMakeLists.txt
src/lorawan_up/: CMakeLists.txt
src/lzfx_comp/: CMakeLists.txt
src/lzfx_decomp/: CMakeLists.txt
src/mp3_encode/: CMakeLists.txt
src/patricia/: CMakeLists.txt
src/poly1305/: CMakeLists.txt
src/qsort/: CMakeLists.txt
src/rsa/: CMakeLists.txt
src/sensor_fusion/: CMakeLists.txt
src/sha256/: CMakeLists.txt
src/stringsearch/: CMakeLists.txt
src/susan_corners/: CMakeLists.txt  susan.c
src/susan_edges/: CMakeLists.txt  susan.c
src/susan_smooth/: CMakeLists.txt  susan.c
